5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4073/executions/1861_1285.log
== TEST (2019-06-26 18:37:21) 
-- CODE:
numpy.linalg("")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numpy.linalg("")
NameError: name 'numpy' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:37:26) 
-- CODE:
numpy.linalg("")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numpy.linalg("")
NameError: name 'numpy' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:37:27) 
-- CODE:
numpy.linalg("")
-- EXECUTION TIME:
0.634907
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/1285/main.py", line 1, in <module>
    numpy.linalg("")
NameError: name 'numpy' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:37:27) 
-- CODE:
numpy.linalg("")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numpy.linalg("")
NameError: name 'numpy' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:38:36) 
-- CODE:
round(4,5)
	print("mensager")
-- ERROR:
File "XXXX", line 2
    print("mensager")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:38:56) 
-- CODE:
round(4,5)
	print(5,6)
-- ERROR:
File "XXXX", line 2
    print(5,6)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:39:26) 
-- CODE:
round(4,5)
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:39:43) 
-- CODE:
round(4,5)
print("mensagem")
-- OUTPUT:
mensagem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:40:39) 
-- CODE:
round(4,5)
print("70,55")

-- OUTPUT:
70,55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:47:22) 
-- CODE:
round(4,5)
print("70,55")

-- OUTPUT:
70,55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
